# loglvk

./: .gitmodules  CMakeLists.txt  shaders.sh
shaders/: hello.frag.glsl  hello.vert.glsl  hello.vert.glsl.spv  lighting.frag.glsl  lighting.frag.glsl.spv  lighting.vert.glsl  lighting.vert.glsl.spv  texture.frag.glsl  texture.frag.glsl.spv  texture.vert.glsl
src/: core.cpp  core.hpp  deletion_queue.hpp  descriptors.cpp  descriptors.hpp  main.cpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  vktypes.cpp  vktypes.hpp
